--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="/static/assets/css/rankedle.css">
     <title>Beat Saber FR - Rankedle</title>
     <style>
-        #ranking .avatar.rank:nth-child(1) {
+        #ranking .list-group-item:nth-child(1) .rank {
             background: #ffc71e;
             color: white;
         }
-        #ranking .avatar.rank:nth-child(2) {
+        #ranking .list-group-item:nth-child(2) .rank {
             background: #959595;
             color: white;
         }
-        #ranking .avatar.rank:nth-child(3) {
+        #ranking .list-group-item:nth-child(3) .rank {
             background: #b5532d;
             color: white;
         }
