--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -234,7 +234,7 @@
                                             <div class="card">
                                                 <div class="card-body">
                                                     <h3 class="card-title">Classement</h3>
-                                                    <div class="list-group list-group-flush list-group-hoverable" id="ranking">
+                                                    <div class="list-group list-group-flush overflow-auto" id="ranking">
                                                         <% for(const rank of ranking) { %>
                                                         <div class="list-group-item">
                                                             <div class="row align-items-center">
