Les phrases de victoire/défaite sont maintenant stockées en base de données
Possibilité d'afficher une image dans les messages de victoire/défaite

--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -159,8 +159,12 @@
                                                             </a>
 
                                                             <div class="text-center">
+                                                                <% if(result.message.image) { %>
+                                                                <img width="500px" src="<%= result.message.image %>">
+                                                                <% } %>
+
                                                                 <p style="font-size: 1.1rem; font-weight: 500;">
-                                                                    <%= result.text %>
+                                                                    <%= result.message.content %>
                                                                 </p>
 
                                                                 <div class="mt-1">
