--- a/views/forms/run/mpov.ejs
+++ b/views/forms/run/mpov.ejs
@@ -64,7 +64,7 @@
                                                 <div class="col">
                                                     <h3><%= mpovInfos.map.songName %></h3>
                                                     <div class="text-muted"><strong>Mapper:</strong> <%= mpovInfos.map.levelAuthorName %></div>
-                                                    <div class="text-muted"><strong>Difficulté:</strong> <span class="badge bg-<%= diffColor %>"><%= mpovInfos.map.difficulty %></span></div>
+                                                    <div class="text-muted"><strong>Difficulté:</strong> <span class="badge bg-<%= diffColor %> text-white"><%= mpovInfos.map.difficulty %></span></div>
                                                 </div>
                                             </div>
                                         </div>
