Ajout d'un modal d'aide

--- a/views/rankedle.ejs
+++ b/views/rankedle.ejs
@@ -68,9 +68,15 @@
                                                 <div class="card-body">
                                                     <div id="rankedle">
                                                         <div class="row mb-3">
+                                                            <div class="col">
+                                                                
+                                                            </div>
                                                             <div class="col-auto ms-auto">
                                                                 <button type="button" class="btn btn-icon" id="stats">
-                                                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="32" height="32" viewBox="0 0 24 24" stroke-width="0.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v6a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M9 8m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v10a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M15 4m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M4 20l14 0" /></svg>
+                                                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="32" height="32" viewBox="0 0 24 24" stroke-width="0.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v6a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M9 8m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v10a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M15 4m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M4 20l14 0" /></svg>
+                                                                </button>
+                                                                <button type="button" class="btn btn-icon" data-bs-toggle="modal" data-bs-target="#modalAbout">
+                                                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="32" height="32" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M12 9h.01" /><path d="M11 12h1v4h1" /></svg>
                                                                 </button>
                                                             </div>
                                                         </div>
@@ -262,6 +268,54 @@
                                                         </div>
                                                     </div>
                                                     <% } %>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="modal modal-lg" id="modalAbout" tabindex="-1">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title">À propos de Rankedle</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h3>Comment jouer ?</h3>
+                                                    <ul>
+                                                        <li>Écoutez l'extrait audio, puis recherchez le titre correspondant dans la liste.</li>
+                                                        <li>Si vous passez ou entrez un titre incorrect, cela étandra la durée de l'extrait audio.</li>
+                                                        <li>Vous avez un total de 6 tentatives pour parvenir à trouver le bon titre.</li>
+                                                        <li>Vous gagnez des points si vous parvenez à trouver le bon titre :</li>
+                                                    </ul>
+
+                                                    <div class="table-responsive">
+                                                        <table class="table text-center w-100">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th>1 tentative</th>
+                                                                    <th>2 tentatives</th>
+                                                                    <th>3 tentatives</th>
+                                                                    <th>4 tentatives</th>
+                                                                    <th>5 tentatives</th>
+                                                                    <th>6 tentatives</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <tr>
+                                                                    <td>8 points</td>    
+                                                                    <td>6 points</td>    
+                                                                    <td>4 points</td>    
+                                                                    <td>3 points</td>    
+                                                                    <td>2 points</td>    
+                                                                    <td>1 point</td>    
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
                                                 </div>
                                             </div>
                                         </div>
