--- a/views/agent/includes/header.ejs
+++ b/views/agent/includes/header.ejs
@@ -6,8 +6,8 @@
             </button>
             <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
                 <a href="/">
-                    <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
-                    Beat Saber FR
+                    <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2"><!--
+                    -->Beat Saber FR
                 </a>
             </h1>
             <div class="navbar-nav flex-row order-md-last">
